...
        "023" to "SC제일은행", "027" to "씨티은행", "031" to "대구은행",
        "032" to "부산은행", "034" to "광주은행", "035" to "제주은행",
        "037" to "전북은행", "039" to "경남은행", "045" to "새마을금고",
        "048" to "신협", "050" to "저축은행", "054" to "HSBC",
        "055" to "도이치은행", "060" to "BOA", "062" to "중국공상은행",
        "063" to "중국건설은행", "064" to "산림조합", "071" to "우체국",
        "081" to "하나은행", "088" to "신한은행", "089" to "케이뱅크",
        "090" to "카카오뱅크", "092" to "토스뱅크",
    )

    val securities = mapOf(
        "209" to "유안타증권", "218" to "KB증권", "238" to "미래에셋증권",
        "240" to "삼성증권", "243" to "한국투자증권", "247" to "NH투자증권",
        "261" to "교보증권", "262" to "하이투자증권", "263" to "현대차증권",
...
